--- a/Client/src/Pages/Landing.css
+++ b/Client/src/Pages/Landing.css
@@ -99,7 +99,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: rgba(255, 255, 255, 0.85);
+    background-color: rgba(255, 255, 255, 0.6);
     backdrop-filter: blur(5px);
     padding: 2rem;
     min-height: 300px;
@@ -109,6 +109,7 @@
     text-align: center;
     border-radius: 12px;
     box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
+    margin-left: .5vw;
   }
   
  
