worked on game page.

--- a/Client/src/Pages/Games.css
+++ b/Client/src/Pages/Games.css
@@ -94,7 +94,7 @@
   .game-btn {
     display: inline-block;
     padding: 0.8rem 2rem;
-    background: #4a90e2;
+    background: #0e0e0e;
     color: white;
     text-decoration: none;
     border-radius: 25px;
