--- a/Client/src/Pages/Workout.css
+++ b/Client/src/Pages/Workout.css
@@ -1,3 +1,9 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Montserrat", sans-serif;
+}
 .workout-container {
     min-height: 100vh;
     position: relative;
@@ -16,35 +22,36 @@
     filter: brightness(0.7);
   }
   
-  .navbar {
-    display: flex;
-    height: 90px;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0 4vw;
-    background-color: rgba(0, 0, 0, 0.6);
-    backdrop-filter: blur(5px);
+  .workout-navbar {
     position: fixed;
-    width: 100%;
     top: 0;
+    left: 0;
+    right: 0;
+    padding: 1.5rem 2rem;
+    background: rgba(0, 0, 0, 0.8);
+    backdrop-filter: blur(10px);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     z-index: 100;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
   }
   
-  .title {
-    font-family: "Bokor", system-ui;
+  .workout-head {
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+    text-align: center;
     color: white;
     font-size: 2.8rem;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-    letter-spacing: 1px;
-    text-decoration: none;
+    margin-right: 35vw;
   }
   
   .workout-content {
     padding-top: 120px;
-    max-width: 1200px;
+    max-width: 1400px;
     margin: 0 auto;
     padding-bottom: 50px;
+    margin-top: 5vh;
   }
   
   .workout-title {
